err/tessfpe.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/grako'...
Listing './lib/python3.5/site-packages/grako/codegen'...
Listing './lib/python3.5/site-packages/grako/test'...
Listing './lib/python3.5/site-packages/grako/test/grammar'...
Listing './lib/python3.5/site-packages/grako/test/zzz_bootstrap'...
Listing './lib/python3.5/site-packages/grako-3.99.9.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sh-1.12.14.dist-info'...
Listing './lib/python3.5/site-packages/tessfpe'...
Listing './lib/python3.5/site-packages/tessfpe/data'...
Listing './lib/python3.5/site-packages/tessfpe/data/files'...
Listing './lib/python3.5/site-packages/tessfpe/dhu'...
Listing './lib/python3.5/site-packages/tessfpe/dhu/MemFiles'...
Compiling './lib/python3.5/site-packages/tessfpe/dhu/fpe.py'...
***   File "./lib/python3.5/site-packages/tessfpe/dhu/fpe.py", line 39
    print "Running:\ntftp -e 192.168.100.1 69 <<EOF\n", \
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tessfpe/dhu/fpesocketconnection.py'...
***   File "./lib/python3.5/site-packages/tessfpe/dhu/fpesocketconnection.py", line 46
    print data,
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tessfpe/sequencer_dsl'...
Compiling './lib/python3.5/site-packages/tessfpe/sequencer_dsl/sequence.py'...
***   File "./lib/python3.5/site-packages/tessfpe/sequencer_dsl/sequence.py", line 77
    print '['
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tessfpe-6.1.12.dev9.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
